# bot_attention

./: .gitignore  LICENSE  README.md  pyproject.toml
attention/: __init__.py  engine.py  llm_helpers.py  models.py  server.py  store.py
scripts/: test_rule_id_migrate.py  test_sqlite_flow.py
